Fixed bug #76383 (array_map on $GLOBALS returns IS_INDIRECT)